src/main/java/ru/test/company/error/CalendarError.java
package ru.test.company.error;

public class CalendarError {

    public static final String CALENDAR_ID_IS_MANDATORY = "ИД календарной записи является обязательным и не может быть пустым";
    public static final String CALENDAR_CREATE_ARGUMENT_IS_MANDATORY = "Аргумент создания календарной записи является обязательным аргументом";
    public static final String CALENDAR_UPDATE_ARGUMENT_IS_MANDATORY = "Аргумент обновления календарной записи является обязательным аргументом";
    public static final String CALENDAR_NOT_FOUND = "Календарная запись не найдена";

}
